Anpassning till ES api

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<iframe src="embed.html#/places/text_ids/38895;20596;35729;35722;26513;5304;49107;34450" style="border: 1px solid #bdbdbd;" frameborder="0" width="700" height="500"></iframe>
+<iframe src="embed.html#/places/record_ids/4,5,6,7,8,9,10,11" style="border: 1px solid #bdbdbd;" frameborder="0" width="700" height="500"></iframe>
 
 <iframe src="embed.html#/places/category/a" style="border: 1px solid #bdbdbd;" frameborder="0" width="700" height="500"></iframe>
 
