Polyfill parse_query_string. Stöd för type if app router

--- a/www/embed.html
+++ b/www/embed.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-	<title>Sägenkarta</title>
+	<title>ISOF karta</title>
 
 	<link rel="stylesheet" type="text/css" media="print,screen,speech" href="http://www.sprakochfolkminnen.se/2.68a1020114182b182ac9a/1/8505/print/SiteVision.css" />
 	<link rel="stylesheet" href="css/style-basic.css"/>
