--- a/www/index.html
+++ b/www/index.html
@@ -59,15 +59,21 @@
 
 	<div class="row">
 
-		<div class="six columns">
+		<div class="four columns">
 			<label>Landing page:<br/>
 				<input class="u-full-width" type="text" id="landingPage" />
 			</label>
 		</div>
 
-		<div class="six columns">
+		<div class="four columns">
 			<label>Sökparams:<br/>
 				<input class="u-full-width" type="text" id="searchParams" />
+			</label>
+		</div>
+
+		<div class="four columns">
+			<label>Titel:<br/>
+				<input class="u-full-width" type="text" id="mapTitle" value="Titel för kartan" />
 			</label>
 		</div>
 
@@ -127,6 +133,7 @@ $(document).ready(function() {
 	var generateCode = function() {
 		var landingPage = $('#landingPage').val();
 		var searchParams = $('#searchParams').val();
+		var mapTitle = $('#mapTitle').val();
 
 		var iframeWidth = $('#widthInput').val();
 		var iframeHeight = $('#heightInput').val();
@@ -147,7 +154,7 @@ $(document).ready(function() {
 			}
 		}
 
-		var generatedCode = '<iframe src="'+embedUrl+'?landingPage='+landingPage+(searchParams != '' ? '#'+searchParams : '')+'" style="border: 1px solid #bdbdbd;" frameborder="0" width="'+iframeWidth+'" height="'+iframeHeight+'"></iframe>';
+		var generatedCode = '<iframe src="'+embedUrl+'?landingPage='+landingPage+('&searchParams='+$('#searchParams').val())+(mapTitle ? '&mapTitle='+mapTitle : '')+(searchParams != '' ? '#'+searchParams : '')+'" style="border: 1px solid #bdbdbd;border-radius: 5px;box-sizing: border-box;" frameborder="0" width="'+iframeWidth+'" height="'+iframeHeight+'"></iframe>';
 
 		if (iframeCode != generatedCode) {
 			iframeCode = generatedCode;
